[package]
name = "serenity_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "current", default-features = false, features = ["builder", "client", "http", "model", "unstable_discord_api", "collector", "rustls_backend"] }
tokio = { version = "1.15.0", features = ["rt", "time" ]}
